added classes flashy to h1, h2, and h3 headers

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Sweetest Cupcakes</title>
   </head>
   <body>
-    <h1><em>Sweetest Cupcakes</em></h1>
-    <h2>Welcome to the place for the tastiest treats, and delicious sweets!</h2>
+    <h1 class=flashy><em>Sweetest Cupcakes</em></h1>
+    <h2 class=flashy>Welcome to the place for the tastiest treats, and delicious sweets!</h2>
     <p>We strive to give our customers the best cupcake around, smiles or your money back!</p>
     <p>By rotating 4 flavors every single week, there's always something new and fantastic to try</p>
     <h2><em>This weeks <a href="cupcakes.html":>Flavors</a></em></h2>
@@ -16,6 +16,6 @@
       <li>Frose Rose</li>
       <li>Apple Crumble</li>
     </ul>
-    <h3>Stay in touch! We'd love to hear feedback on how we're doing, you can reach us <a href="contact.html">here</a></h3>
+    <h3 class=flashy>Stay in touch! We'd love to hear feedback on how we're doing, you can reach us <a href="contact.html">here</a></h3>
   </body>
 </html>
