add css styling and image to index.html

--- a/cupcakes.html
+++ b/cupcakes.html
@@ -6,8 +6,12 @@
   </head>
   <body>
     <img src="pictures/Apple-Cupcakes.jpg" width="450" height="450" alt="Apple Cupcake">
+    <h2>Apple Crumble</h2>
     <img src="pictures/chai-latte-cupcakes.jpg" width="450" height="450" alt="chai latte cupcake">
+    <h2>Chai Delight</h2>
     <img src="pictures/moist-chocolate-cupcakes-5.jpg" width="450" height="450" alt="Moist brownie cupcake">
+    <h2 class=best>Moist Brownie</h2>
     <img src="pictures/rose-cupcake.jpg" width="450" height="450" alt="Frose Rose Cupcake">
+    <h2>Frose Rose</h2>
   </body>
 </html>
