--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <p>By rotating 4 flavors every single week, there's always something new and fantastic to try</p>
     <h2><em>This weeks <a href="cupcakes.html":>Flavors</a></em></h2>
     <ul>
-      <li>Moist Brownie</li>
+      <li class=best>Moist Brownie</li>
       <li>Chai Delight</li>
       <li>Frose Rose</li>
       <li>Apple Crumble</li>
     </ul>
     <h3 class=flashy>Stay in touch! We'd love to hear feedback on how we're doing, you can reach us <a href="contact.html">here</a></h3>
+    <img src="pictures/vanillacupcakes.webp" alt="vanilla cupcakes">
   </body>
 </html>
